--- a/app/src/main/res/layout/activity_age.xml
+++ b/app/src/main/res/layout/activity_age.xml
@@ -10,31 +10,37 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:text="태어난 연도를 입력하세요" />
 
     <EditText
+        android:id="@+id/e1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="숫자를 입력하세요"/>
+        android:layout_height="44dp"
+        android:hint="숫자를 입력하세요" />
+
     <Button
+        android:id="@+id/b1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="나이계산"/>
+        android:layout_height="44dp"
+        android:text="나이계산" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="44dp"
         android:text="나이를 입력하세요" />
+
     <EditText
+        android:id="@+id/e2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="숫자를 입력하세요"/>
+        android:layout_height="44dp"
+        android:hint="숫자를 입력하세요" />
+
     <Button
+        android:id="@+id/b2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="태어난 해 계산"/>
+        android:layout_height="44dp"
+        android:text="태어난 해 계산" />
 
 </LinearLayout>
