--- a/app/src/main/res/layout/activity_cal.xml
+++ b/app/src/main/res/layout/activity_cal.xml
@@ -6,36 +6,60 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.jisung.myapplication.CalActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="44dp"
+            android:layout_height="wrap_content"
+            android:text="숫자1"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/e1"
+            android:hint="정수입력"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/e1"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/e2"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="44dp"
+            android:layout_height="wrap_content"
+            android:text="숫자2"/>
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/e2"
+            android:hint="정수입력"/>
+    </LinearLayout>
+
+
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/b1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/b1"/>
+        android:text="더하기"/>
+
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/b2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/b2"/>
+        android:text="빼기"/>
+
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/b3"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/b3"/>
+        android:text="곱하기"/>
+
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/b4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/b4"/>
+        android:text="나누기"/>
 
 </LinearLayout>
