--- a/app/src/main/res/layout/activity_degree.xml
+++ b/app/src/main/res/layout/activity_degree.xml
@@ -7,36 +7,38 @@
     android:orientation="vertical"
     tools:context="com.example.jisung.myapplication.DegreeActivity">
 
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="44dp"
         android:text="섭씨온도를 입력하세요" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/e1"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="44dp"
         android:hint="온도를 입력하세요" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="화씨계산" />
+        android:layout_height="44dp"
+        android:text="화씨계산"
+        android:id="@+id/b1"/>
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_height="20dp"
-        android:layout_weight="0.24"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+
         android:text="화씨온드를 입력하세요" />
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
+        android:id="@+id/e2"
         android:hint="온도를 입력하세요"/>
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="15dp"
+        android:layout_height="44dp"
+        android:id="@+id/b2"
         android:text="섭씨계산" />
 </LinearLayout>
