--- a/app/src/main/res/layout/activity_resto.xml
+++ b/app/src/main/res/layout/activity_resto.xml
@@ -12,33 +12,44 @@
         android:layout_height="wrap_content" />
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/e1"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/e2"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/e3"/>
     <CheckBox
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/c1"/>
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/b1"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/t1"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/t2"/>
 
 </LinearLayout>
