--- a/app/src/main/res/layout/activity_cal.xml
+++ b/app/src/main/res/layout/activity_cal.xml
@@ -15,11 +15,13 @@
             android:layout_width="44dp"
             android:layout_height="wrap_content"
             android:text="숫자1"/>
+
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/e1"
-            android:hint="정수입력"/>
+            android:hint="정수입력"
+        />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,6 +32,7 @@
             android:layout_width="44dp"
             android:layout_height="wrap_content"
             android:text="숫자2"/>
+
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
